--- a/package.json
+++ b/package.json
@@ -1,16 +1,66 @@
 {
-  "name": "reservas-frontend-v2",
-  "version": "0.2.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+  "name": "reservas-frontend-vercel-v2",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
-    "axios": "^1.4.0",
-    "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+    "asynckit": "^0.4.0",
+    "axios": "^1.9.0",
+    "busboy": "^1.6.0",
+    "call-bind-apply-helpers": "^1.0.2",
+    "caniuse-lite": "^1.0.30001718",
+    "client-only": "^0.0.1",
+    "combined-stream": "^1.0.8",
+    "delayed-stream": "^1.0.0",
+    "dunder-proto": "^1.0.1",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "follow-redirects": "^1.15.9",
+    "form-data": "^4.0.2",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "glob-to-regexp": "^0.4.1",
+    "gopd": "^1.2.0",
+    "graceful-fs": "^4.2.11",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "js-tokens": "^4.0.0",
+    "loose-envify": "^1.4.0",
+    "math-intrinsics": "^1.1.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "nanoid": "^3.3.11",
+    "next": "^13.5.11",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.4.31",
+    "proxy-from-env": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "scheduler": "^0.23.2",
+    "source-map-js": "^1.2.1",
+    "streamsearch": "^1.1.0",
+    "styled-jsx": "^5.1.1",
+    "tslib": "^2.8.1",
+    "watchpack": "^2.4.0"
+  },
+  "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kevin13201j/reservas-frontend-vercel-v2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Kevin13201j/reservas-frontend-vercel-v2/issues"
+  },
+  "homepage": "https://github.com/Kevin13201j/reservas-frontend-vercel-v2#readme",
+  "description": ""
 }
